--- a/src/Songtron - Classifier.ipynb
+++ b/src/Songtron - Classifier.ipynb
@@ -9,25 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "import imageio"
+    "import imageio\n",
+    "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
     "#All functions here receive a binarized image.\n",
     "def bw_ratio(img):\n",
-    "    pixel_count = np.size\n",
-    "    white_pixels = img[img == 1]\n",
+    "    pixel_count = img.size\n",
+    "    white_pixels = img[img == 255].size\n",
+    "    #print(pixel_count)\n",
+    "    #print(img)\n",
+    "    #print(img[img == 255].size)\n",
     "    return white_pixels/pixel_count\n",
     "\n",
     "def wh_ratio(img): #Width over height\n",
@@ -39,7 +43,7 @@
     "    width = img.shape[1]\n",
     "    \n",
     "    #Okay, first let us compute center of mass of bin image\n",
-    "    white_pixels = np.where[img==1]\n",
+    "    white_pixels = np.where(img==0)\n",
     "    #This gives us two lists, containing the coordinates.\n",
     "    y_mean = white_pixels[0].sum()/white_pixels[0].size\n",
     "    x_mean = white_pixels[1].sum()/white_pixels[1].size\n",
@@ -50,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +90,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This function returns the above features.\n",
+    "def extract_features(img):\n",
+    "    center_mass = center_mass_ratio(img)\n",
+    "    return (bw_ratio(img), wh_ratio(img), center_mass[0], center_mass[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,13 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#This function returns the above features.\n",
-    "#def extract_features(img):"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -114,93 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([[255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255, 255, 255,   0,   0,   0,   0,   0,   0,\n",
-       "        255,   0],\n",
-       "       [255, 255, 255, 255, 255,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [255, 255, 255,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [255, 255,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [255,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [255,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0, 255],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "        255, 255],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0, 255,\n",
-       "        255, 255],\n",
-       "       [255,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0, 255, 255,\n",
-       "        255, 255]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img_1f = \"cropped_num1.0.png\"\n",
     "img_7f = \"cropped_num7.0.png\"\n",
@@ -214,64 +143,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.40540540540540543"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wh_ratio(img_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([], dtype=object)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bw_ratio(img_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'function' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-eb82698d0171>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcenter_mass_ratio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-26-eef551b97c07>\u001b[0m in \u001b[0;36mcenter_mass_ratio\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m#Okay, first let us compute center of mass of bin image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mwhite_pixels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m#This gives us two lists, containing the coordinates.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0my_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwhite_pixels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mwhite_pixels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'function' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "center_mass_ratio(img_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = []\n",
+    "Y = []\n",
+    "\n",
+    "def fill_training_sets(path, X, Y):\n",
+    "    note_type = glob.glob(path)\n",
+    "    N = 0\n",
+    "    for note in note_type:\n",
+    "        an_img = imageio.imread(note)\n",
+    "        an_img = threshold(an_img, otsu_threshold(an_img))\n",
+    "        img_features = extract_features(an_img)\n",
+    "        X.append(list(img_features))\n",
+    "        Y.append(N)\n",
+    "        N+=1\n",
+    "\n",
+    "#Crotchet\n",
+    "#fill_training_sets(\"../assets/reference/crotchet/*\", X, Y)\n",
+    "\n",
+    "#Minim\n",
+    "#fill_training_sets(\"../datasets/minim/*\", X, Y, 2)\n",
+    "\n",
+    "#G Clef\n",
+    "#fill_training_sets(\"../datasets/g_clef/*\", X, Y, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Build a classifier. Receives path to images.\n",
+    "def build_classifier(path):\n",
+    "    X = []\n",
+    "    Y = []\n",
+    "    fill_training_sets(path, X, Y)\n",
+    "    clf = RandomForestClassifier(n_estimators=50, random_state=42)\n",
+    "    clf.fit(X,Y)\n",
+    "    return clf"
    ]
   },
   {
@@ -283,11 +230,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6864864864864865,\n",
+       " 0.40540540540540543,\n",
+       " 0.5486590038314176,\n",
+       " 0.7576887232059646)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_node = imageio.imread(test)\n",
+    "test_node = threshold(test_node, otsu_threshold(test_node))\n",
+    "test_feat = extract_features(test_node)\n",
+    "test_feat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classif = RandomForestClassifier(n_estimators=50, random_state=42)"
+    "#Classifier for crotchet\n",
+    "cr_clf = build_classifier(\"../assets/reference/crotchet/*\")\n",
+    "clef_clf = build_classifier(\"../assets/reference/clef/*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.06 0.24 0.   0.06 0.   0.   0.   0.08 0.2  0.2  0.14 0.   0.02 0.  ]]\n",
+      "[[1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cr_clf.predict_proba([test_feat]))\n",
+    "print(clef_clf.predict_proba([test_feat]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cr_clf.predict([test_feat])"
    ]
   },
   {
