--- a/src/Songtron - Classifier.ipynb
+++ b/src/Songtron - Classifier.ipynb
@@ -306,6 +306,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (symbol_classifier.py, line 38)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/hiram/Workspace/miniconda3/envs/imgproc/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3331\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-fbeed4cb7d2b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import symbol_classifier\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/hiram/Workspace/SongTron/src/symbol_classifier.py\"\u001b[0;36m, line \u001b[0;32m38\u001b[0m\n\u001b[0;31m    return (bw_ratio(img), wh_ratio(img), center_mass[0], center_mass[1])\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "import symbol_classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
