Classify notes in on its way!

--- a/src/Songtron - Classifier.ipynb
+++ b/src/Songtron - Classifier.ipynb
@@ -108,7 +108,8 @@
     "### The feaures we want to analyse are:\n",
     "- Black/White pixel ratio.\n",
     "- Width/Height bounding box ratio.\n",
-    "- 'Center of mass' proportions."
+    "- 'Center of mass' proportions.\n",
+    "- Matching pixels"
    ]
   },
   {
