--- a/src/Symbol Classifier.ipynb
+++ b/src/Symbol Classifier.ipynb
@@ -110,12 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.04986180297836329,\n",
+       " 0.018989125994593348,\n",
+       " 0.07169508772531119,\n",
+       " 0.24159464231117134]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ref_feat = (0.7363482894648498, 0.3864162794108121, 0.47696391610610644, 0.5160940808947933)\n",
-    "x = map(rmse, list(ref_feat), list(img_1_feats))"
+    "x = map(rmse, list(ref_feat), list(img_1_feats))\n",
+    "list(x)"
    ]
   },
   {
@@ -228,6 +243,22 @@
    ],
    "source": [
     "apply_mask(ref_image, img_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing da classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from classify_notes import *"
    ]
   },
   {
